objects/SOW_Request__c.object
<CustomObject>
    <description>Informatics</description>
    <label>SOW Request</label>
    <nameField>
        <displayFormat>SR-{0000000000}</displayFormat>
        <label>Project Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SOW Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>MSA_INF__c</fullName>
        <label>MSA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days_INF__c</fullName>
        <description>Days of effort is the number of days that the service consultant estimate for the project.  This should reflect what we sell (number of days sold).  The amount is in dollars.  So if we sold 100 days at $1700/day, the days of effort would be 100 and the amount would be 170,000 (in dollars).</description>
        <label>Days of Effort</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes_INF__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SOW_Owner__c</fullName>
        <description>Manager, or Owner of seeing SOW to completion.  May manage necessary resources needed</description>
        <label>SOW Manager</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_INF__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Request</fullName>
                    <default>true</default>
                    <label>Initial Request</label>
                </value>
                <value>
                    <fullName>Request Acknowledged</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Internal Review</fullName>
                </value>
                <value>
                    <fullName>SOW Attached</fullName>
                </value>
                <value>
                    <fullName>Customer Review</fullName>
                </value>
                <value>
                    <fullName>SOW Complete</fullName>
                </value>
                <value>
                    <fullName>Waiting for PO</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>PO Received</fullName>
                </value>
                <value>
                    <fullName>Request Cancelled</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment_INF__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Est_Duration__c</fullName>
        <description>Requested by Paul Weber</description>
        <inlineHelpText>Allows the OA estimated completion date is set more accurately. Enter the weeks expected, with effort, staffing, utilization, delays and startup time all factored in.  This is used for revrev forecasting, and project portfolio management.</inlineHelpText>
        <label>Est Duration</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <description>Requested by Paul Weber and only Service Representatives can edit this field. All other profiles can view this field.</description>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Product Line 1</fullName>
                </value>
                <value>
                    <fullName>Product Line 2</fullName>
                </value>
                <value>
                    <fullName>Product Line 3</fullName>
                </value>
                <value>
                    <fullName>Product Line 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <description>Requested by Paul Weber</description>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demoed_By_INF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Demoed By</label>
        <referenceTo>Demo_Log__c</referenceTo>
        <relationshipLabel>SOW Requests</relationshipLabel>
        <relationshipName>SOW_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Needed_By_INF__c</fullName>
        <label>Needed By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comment_on_SOW__c</fullName>
        <label>Comment on SOW</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_ID_INF__c</fullName>
        <description>Will get auto populated when Order booked</description>
        <formula>Opportunity_Name_INF__r.Project_ID_INF__c</formula>
        <label>Project ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_of_Effort__c</fullName>
        <description>Days of effort is the number of days that the service consultant estimate for the project.  This should reflect what we sell (number of days sold).  The amount is in dollars.  So if we sold 100 days at $1700/day, the days of effort would be 100 and the amount would be 170,000 (in dollars).</description>
        <label>Amount of Effort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comment_on_Scope__c</fullName>
        <label>Comment on Scope</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Template__c</fullName>
        <description>Requested by Paul Weber</description>
        <inlineHelpText>For those projects where planning results in a phased, more-detailed plan, we could use this to point to an OA project your team has set up, eliminating the need for major changes needed later.</inlineHelpText>
        <label>Project Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Date_INF__c</fullName>
        <formula>TODAY()</formula>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Type_INF__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scope project and SOW</fullName>
                    <default>true</default>
                    <label>Scope project and SOW</label>
                </value>
                <value>
                    <fullName>Scope for budget purposes (no SOW)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_By_INF__c</fullName>
        <formula>Opportunity_Name_INF__r.Owner.FirstName &amp;&quot; &quot;&amp; Opportunity_Name_INF__r.Owner.LastName</formula>
        <label>Requested By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SME_Assigned_INF__c</fullName>
        <label>SME Assigned</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scoping_Progress__c</fullName>
        <label>Scoping Progress</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 - Not Started</fullName>
                </value>
                <value>
                    <fullName>1- Acknowledged and transfer to SME</fullName>
                </value>
                <value>
                    <fullName>2 - SME Contacts Sales</fullName>
                </value>
                <value>
                    <fullName>3 - Scoping begun with Customer</fullName>
                </value>
                <value>
                    <fullName>4 - Effort agreed</fullName>
                </value>
                <value>
                    <fullName>5 - SOW Completed</fullName>
                </value>
                <value>
                    <fullName>6 - Waiting for PO</fullName>
                </value>
                <value>
                    <fullName>7 - Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Name_INF__c</fullName>
        <formula>Opportunity_Name_INF__r.Account.Name</formula>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOW_Expiration_INF__c</fullName>
        <label>SOW Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name_INF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>SOW Requests</relationshipLabel>
        <relationshipName>SOW_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Size_INF__c</fullName>
        <formula>Opportunity_Name_INF__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Category_INF__c</fullName>
        <label>SOW Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analytics &amp; Visual - Clinical</fullName>
                </value>
                <value>
                    <fullName>Analytics &amp; Visual - R&amp;D</fullName>
                </value>
                <value>
                    <fullName>Attivio</fullName>
                </value>
                <value>
                    <fullName>Desktop</fullName>
                </value>
                <value>
                    <fullName>Elements</fullName>
                </value>
                <value>
                    <fullName>Enterprise R&amp;D</fullName>
                </value>
                <value>
                    <fullName>Imaging</fullName>
                </value>
                <value>
                    <fullName>INF - Other</fullName>
                </value>
                <value>
                    <fullName>QA/QC</fullName>
                </value>
                <value>
                    <fullName>Signals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_1st_SOW_Draft__c</fullName>
        <label>Date of 1st SOW Draft</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Project_Owner__c</fullName>
        <description>Requested by Paul Weber. We can try using global picklists to make the values dynamic.</description>
        <inlineHelpText>A name of someone who will own the project when we turn it over from Edgar to whomever.</inlineHelpText>
        <label>Initial Project Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Anil</fullName>
                </value>
                <value>
                    <fullName>Doug</fullName>
                </value>
                <value>
                    <fullName>Enko</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Customer_Contacted__c</fullName>
        <inlineHelpText>1st contact by Services</inlineHelpText>
        <label>Date Customer Contacted</label>
        <type>Date</type>
    </fields>
</CustomObject>